# persos

./: .gitignore
.claude/: config.json
aura/: .env.example  .gitignore  README.md  docker-compose.yml  package.json
aura/backend/: pyproject.toml
aura/backend/src/aura/: __init__.py  main.py
aura/backend/src/aura/api/: auth.py  storage.py
aura/backend/src/aura/core/: __init__.py  auth.py  config.py  database.py
aura/backend/src/aura/core/crypto/: __init__.py  encryption.py  key_derivation.py  random.py  types.py
aura/backend/src/aura/models/: __init__.py  access_grant.py  audit_log.py  base.py  encrypted_data.py  session.py  user.py
aura/backend/src/aura/services/: __init__.py
aura/backend/src/aura/services/auth/: __init__.py  session.py  srp.py  types.py
aura/backend/src/aura/services/storage/: __init__.py  encrypted_storage.py  types.py
aura/backend/tests/: __init__.py  conftest.py
aura/backend/tests/integration/: test_api.py
aura/backend/tests/unit/: test_auth.py  test_crypto.py  test_storage.py
aura/frontend/web/: jest.config.js  jest.setup.js  package.json
aura/frontend/web/src/lib/api/: client.ts
aura/frontend/web/src/lib/api/__tests__/: client.test.ts
aura/frontend/web/src/lib/auth/: srp-client.ts
aura/frontend/web/src/lib/auth/__tests__/: srp-client.test.ts
aura/frontend/web/src/lib/crypto/: index.ts
aura/frontend/web/src/lib/crypto/__tests__/: encryption.test.ts
aura/scripts/: demo.py  setup.sh
docs/: aura-PERSONAL_ASSISTANT_VISION.md  aura-api-specifications.md  aura-application-concept.md  aura-critical-review-report.md  aura-design-system.md  aura-high-level-concept.md  aura-implementation-plan.md  aura-interactive-components.md  aura-key-management-system.md  aura-mvp-feature-showcase.md  aura-phase1-implementation-detail.md  aura-phase1-sprint-timeline.md  aura-prd.md  aura-prfaq.md  aura-privacy-architecture-proposal.md  aura-privacy-compliance-framework.md  aura-security-hardening-guide.md  aura-support-access-control.md  aura-technical-architecture.md  aura-ui-wireframes.md  aura-use-cases.md  aura-user-flows.md  aura-ux-design-specifications.md  aura-zero-knowledge-architecture.md
